--- a/css/styles.css
+++ b/css/styles.css
@@ -604,6 +604,10 @@ img {
   padding: 15px 16px;
 }
 
+.form-input::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+
 .subscribe-form {
   display: flex;
   width: 358px;
