--- a/css/styles.css
+++ b/css/styles.css
@@ -786,6 +786,7 @@ img {
   min-height: 581px;
   top: 50%;
   left: 50%;
+  padding: 40px;
   transform: translate(-50%, -50%);
   background-color: var(--bg-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -838,49 +839,72 @@ img {
   letter-spacing: 0.03em;
 
   color: #212121;
-  margin-top: 40px;
-  margin-left: 40px;
-  margin-right: 40px;
   margin-bottom: 12px;
 }
 
-.modal-list {
-  display: inline-block;
-  margin-left: 40px;
-}
-
-.modal-item {
-  /* position: relative; */
-  width: 448px;
-  height: 40px;
-  margin-bottom: 28px;
+.modal-form {
+  display: flex;
+  flex-direction: column;
 }
 
 .form-label {
-  /* position: absolute; */
   font-weight: normal;
   font-size: 12px;
   line-height: 1.666;
   letter-spacing: 0.01em;
 
   color: var(--secondary-font-color);
+  margin-bottom: 10px;
 }
 
-.modal-form-input {
+.modal-form-input-wrapper {
+  position: relative;
+  display: block;
+}
+
+.form-label-comment {
+  margin-bottom: 20px;
+}
+
+.comment::placeholder {
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-form-input,
+.comment {
   width: 100%;
-  height: 100%;
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
 }
 
-.modal-comment-field {
-  display: inline-block;
-  margin-left: 40px;
+.modal-form-input {
+  height: 40px;
 }
 
 .comment {
+  height: 120px;
+  resize: none;
+}
+
+.modal-form-icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.check-form-policy {
   display: block;
 }
 
+.modal-form-btn {
+  width: 200px;
+  margin: 0 auto;
+}
 /*==================== END OF BACKDROP ====================*/
