--- a/css/styles.css
+++ b/css/styles.css
@@ -822,6 +822,13 @@ img {
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   cursor: pointer;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-btn:focus,
+.close-btn:hover {
+  fill: var(--accent-color);
 }
 
 .is-hidden {
@@ -857,6 +864,10 @@ img {
   margin-bottom: 10px;
 }
 
+.modal-form-input:focus + .modal-form-icon {
+  fill: var(--accent-color);
+}
+
 .modal-form-input-wrapper {
   position: relative;
   display: block;
@@ -883,13 +894,21 @@ img {
   border-radius: 4px;
 }
 
+.modal-form-input:focus,
+.comment:focus {
+  border-color: var(--accent-color);
+  outline: none;
+}
+
 .modal-form-input {
   height: 40px;
+  padding-left: 42px;
 }
 
 .comment {
   height: 120px;
   resize: none;
+  padding: 12px 16px;
 }
 
 .modal-form-icon {
@@ -897,6 +916,8 @@ img {
   left: 12px;
   top: 50%;
   transform: translateY(-50%);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .check-form-policy {
